--- a/ui/assets/variables.scss
+++ b/ui/assets/variables.scss
@@ -1,4 +1,14 @@
 // Ref: https://github.com/nuxt-community/vuetify-module#customvariables
 //
 // The variables you want to modify
-// $font-size-root: 20px;
+//$font-size-root: 40px;
+
+$dark1: #35495E;
+$dark2: #0B2027;
+$primary: #41B883;
+
+$material-light: (
+  'text': (
+    'primary': $dark2
+  )
+);
